src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>npsp__Current_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the current Address record for this Contact. NPSP populates the Contact&apos;s Mailing Address field with the street, city, state, and postal code from the current Address record.</description>
        <inlineHelpText>Lookup to the current Address record for this Contact. NPSP populates the Contact&apos;s Mailing Address field with the street, city, state, and postal code from the current Address record.</inlineHelpText>
        <label>Current Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>npsp__Address__c.npsp__Household_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>To see all addresses for the Contact&apos;s household, enter A-* in the search window</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>npsp__Address__c</referenceTo>
        <relationshipLabel>Contacts (Current Address)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__CustomizableRollups_UseSkewMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Customizable Rollups will always use &apos;Skew Mode&apos; to rollup Hard Credit and Soft Credits for this record.</description>
        <inlineHelpText>When checked, Customizable Rollups will always use &apos;Skew Mode&apos; to rollup Hard Credit and Soft Credits for this record.</inlineHelpText>
        <label>Customizable Rollups: Force Skew Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the Contact is deceased. When selected, NPSP excludes this Contact from Household Naming (unless this Contact is the only one in the Household) and from standard email and phone lists.</description>
        <inlineHelpText>Indicates the Contact is deceased. When selected, NPSP excludes this Contact from Household Naming (unless this Contact is the only one in the Household) and from standard email and phone lists.</inlineHelpText>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the Contact does not want your organization to call or email. Use this field to filter out Contacts in email and phone lists. When selected, NPSP excludes this Contact from Opportunity Acknowledgements.</description>
        <inlineHelpText>Indicates the Contact does not want your organization to call or email. Use this field to filter out Contacts in email and phone lists. When selected, NPSP excludes this Contact from Opportunity Acknowledgements.</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Exclude_from_Household_Formal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, NPSP excludes this Contact from the Household Formal Greeting (set in NPSP Settings | People | Households).</description>
        <inlineHelpText>When selected, NPSP excludes this Contact from the Household Formal Greeting (set in NPSP Settings | People | Households).</inlineHelpText>
        <label>Exclude from Household Formal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Exclude_from_Household_Informal_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, NPSP excludes this Contact from the Household Informal Greeting (set in NPSP Settings | People | Households).</description>
        <inlineHelpText>When selected, NPSP excludes this Contact from the Household Informal Greeting (set in NPSP Settings | People | Households).</inlineHelpText>
        <label>Exclude from Household Informal Greeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Exclude_from_Household_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, NPSP excludes this Contact from the Household Name (set in NPSP Settings | People | Households).</description>
        <inlineHelpText>When selected, NPSP excludes this Contact from the Household Name (set in NPSP Settings | People | Households).</inlineHelpText>
        <label>Exclude from Household Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__First_Soft_Credit_Amount__c</fullName>
        <description>The amount of this Contact&apos;s earliest soft credit.</description>
        <inlineHelpText>The amount of this Contact&apos;s earliest soft credit.</inlineHelpText>
        <label>First Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__First_Soft_Credit_Date__c</fullName>
        <description>The date of this Contact&apos;s earliest soft credit.</description>
        <inlineHelpText>The date of this Contact&apos;s earliest soft credit.</inlineHelpText>
        <label>First Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__HHId__c</fullName>
        <description>Holds the Id of the Household record (either Household Account, or Household object) this Contact is currently associated with (read only).</description>
        <formula>if(Account.npe01__SYSTEM_AccountType__c==&apos;Household Account&apos;,CASESAFEID(AccountId),CASESAFEID(npo02__Household__c))</formula>
        <inlineHelpText>Holds the Id of the Household record (either Household Account, or Household object) this Contact is currently associated with (read only).</inlineHelpText>
        <label>HHId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Largest_Soft_Credit_Amount__c</fullName>
        <description>The amount of this Contact&apos;s largest soft credit.</description>
        <inlineHelpText>The amount of this Contact&apos;s largest soft credit.</inlineHelpText>
        <label>Largest Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Largest_Soft_Credit_Date__c</fullName>
        <description>The date of this Contact&apos;s largest soft credit.</description>
        <inlineHelpText>The date of this Contact&apos;s largest soft credit.</inlineHelpText>
        <label>Largest Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Last_Soft_Credit_Amount__c</fullName>
        <description>The amount of this Contact&apos;s most recent soft credit.</description>
        <inlineHelpText>The amount of this Contact&apos;s most recent soft credit.</inlineHelpText>
        <label>Last Soft Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Last_Soft_Credit_Date__c</fullName>
        <description>The date of this Contact&apos;s most recent soft credit.</description>
        <inlineHelpText>The date of this Contact&apos;s most recent soft credit.</inlineHelpText>
        <label>Last Soft Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_Last_N_Days__c</fullName>
        <description>The number of soft credits attributed to this Contact that closed in the last N days. The value of N is set in NPSP Settings | Donations | Donor Statistics.</description>
        <inlineHelpText>The number of soft credits attributed to this Contact that closed in the last N days. The value of N is set in NPSP Settings | Donations | Donor Statistics.</inlineHelpText>
        <label>Number of Soft Credits Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_Last_Year__c</fullName>
        <description>The number of soft credits attributed to this Contact in the previous calendar year.</description>
        <inlineHelpText>The number of soft credits attributed to this Contact in the previous calendar year.</inlineHelpText>
        <label>Number of Soft Credits Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_This_Year__c</fullName>
        <description>The number of soft credits attributed to this Contact this calendar year.</description>
        <inlineHelpText>The number of soft credits attributed to this Contact this calendar year.</inlineHelpText>
        <label>Number of Soft Credits This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits_Two_Years_Ago__c</fullName>
        <description>The number of soft credits attributed to this Contact two calendar years ago.</description>
        <inlineHelpText>The number of soft credits attributed to this Contact two calendar years ago.</inlineHelpText>
        <label>Number of Soft Credits Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Soft_Credits__c</fullName>
        <description>The total number of soft credits attributed to this Contact.</description>
        <inlineHelpText>The total number of soft credits attributed to this Contact.</inlineHelpText>
        <label>Number of Soft Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account marked as Primary in this Contact&apos;s list of Organization Affiliations.</description>
        <inlineHelpText>The Account marked as Primary in this Contact&apos;s list of Organization Affiliations.</inlineHelpText>
        <label>Primary Affiliation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Do Not Use.  Use Organization Affiliations.</relationshipLabel>
        <relationshipName>PrimaryAffiliatedContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Primary_Contact__c</fullName>
        <description>Indicates if this Contact is designated as the Primary Contact on their Account (read only).</description>
        <formula>Account.npe01__One2OneContact__c = Id</formula>
        <inlineHelpText>Indicates if this Contact is designated as the Primary Contact on their Account (read only).</inlineHelpText>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Soft_Credit_Last_N_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total amount of soft credit attributed to this Contact in the last N days. The value of N is set in NPSP Settings | Donations | Donor Statistics.</description>
        <inlineHelpText>The total amount of soft credit attributed to this Contact in the last N days. The value of N is set in NPSP Settings | Donations | Donor Statistics.</inlineHelpText>
        <label>Soft Credit Last N Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Sustainer__c</fullName>
        <description>Indicates if this Contact is an active, lapsed, or former recurring donor. The value is based on the Status of the related Recurring Donations.</description>
        <inlineHelpText>Indicates if this Contact is an active, lapsed, or former recurring donor. The value is based on the Status of the related Recurring Donations.</inlineHelpText>
        <label>Sustainer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Lapsed</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Undeliverable_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the address is undeliverable.</description>
        <label>Undeliverable Mailing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__is_Address_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, NPSP will not sync this Contact&apos;s address with the Household Default or Seasonal Address. Use this to maintain a separate Mailing Address for this particular Contact.</description>
        <inlineHelpText>When selected, NPSP will not sync this Contact&apos;s address with the Household Default or Seasonal Address. Use this to maintain a separate Mailing Address for this particular Contact.</inlineHelpText>
        <label>Address Override</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>BulkMessageContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>Bulk_SMS_Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Org_Contact_Hierarchy</fullName>
        <columns>Road_Name__c</columns>
        <columns>CONTACT.REPORTS_TO.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Contact_Hierarchy</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CVMA_Membership_Level_Validation</fullName>
        <active>true</active>
        <description>Validates Membership ID prefix matches membership level: FM, SUP, or AUX</description>
        <errorConditionFormula>AND(
  NOT(ISBLANK(TEXT(Level__c))),
  NOT(ISBLANK(Membership_Id__c)),
  OR(
    AND(
      TEXT(Level__c) = "Full Member",
      NOT(BEGINS(UPPER(Membership_Id__c), "FM"))
    ),
    AND(
      TEXT(Level__c) = "Support Member",
      NOT(BEGINS(UPPER(Membership_Id__c), "SUP"))
    ),
    AND(
      TEXT(Level__c) = "Auxiliary Member",
      NOT(BEGINS(UPPER(Membership_Id__c), "AUX"))
    )
  )
)</errorConditionFormula>
        <errorDisplayField>Membership_Id__c</errorDisplayField>
        <errorMessage>Membership ID prefix must match level: Full Member=FM, Support Member=SUP, Auxiliary Member=AUX (e.g., FM1, SUP123, AUX12345)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CVMA_Membership_Format_Validation</fullName>
        <active>true</active>
        <description>Validates Membership ID format: FM/SUP/AUX + 1-5 digits, max 8 characters</description>
        <errorConditionFormula>AND(
  NOT(ISBLANK(Membership_Id__c)),
  NOT(ISBLANK(TEXT(Level__c))),
  OR(
    LEN(Membership_Id__c) > 8,
    AND(
      TEXT(Level__c) = "Full Member",
      OR(
        LEN(Membership_Id__c) &lt; 3,
        NOT(REGEX(Membership_Id__c, "^[A-Za-z]{2}[0-9]{1,5}$"))
      )
    ),
    AND(
      TEXT(Level__c) = "Support Member",
      OR(
        LEN(Membership_Id__c) &lt; 4,
        NOT(REGEX(Membership_Id__c, "^[A-Za-z]{3}[0-9]{1,5}$"))
      )
    ),
    AND(
      TEXT(Level__c) = "Auxiliary Member",
      OR(
        LEN(Membership_Id__c) &lt; 4,
        NOT(REGEX(Membership_Id__c, "^[A-Za-z]{3}[0-9]{1,5}$"))
      )
    )
  )
)</errorConditionFormula>
        <errorDisplayField>Membership_Id__c</errorDisplayField>
        <errorMessage>Invalid format. Use: FM+1-5 digits (3-8 chars), SUP+1-5 digits (4-8 chars), or AUX+1-5 digits (4-8 chars)</errorMessage>
    </validationRules>
</CustomObject>