src/objects/Contact/fields/Administrative_Hold_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Hold_End_Date__c</fullName>
    <description>Calculated or manually entered date for Administrative Hold conclusion per Appendix C Section 7 - enforces 90-day maximum unless extended by NSAA</description>
    <formula>IF(
    NOT(ISBLANK(Administrative_Hold_Start_Date__c)),
    Administrative_Hold_Start_Date__c + 90,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatic calculation: 90 days from start date per Appendix C Section 7 maximum period. Extensions require NSAA approval.</inlineHelpText>
    <label>Administrative Hold End Date</label>
    <type>Date</type>
</CustomField>