src/objects/Contact/fields/Administrative_Hold_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Hold_Start_Date__c</fullName>
    <description>Date Administrative Hold was initiated per CVMA Appendix C Section 6 - required for 90-day maximum enforcement and compliance tracking</description>
    <inlineHelpText>Enter the date this member was placed on Administrative Hold. Used to calculate the 90-day maximum period per Appendix C Section 7.</inlineHelpText>
    <label>Administrative Hold Start Date</label>
    <type>Date</type>
</CustomField>