src/objects/Contact/fields/Administrative_Hold_Status__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Hold_Status__c</fullName>
    <description>Tracks member Administrative Hold status per CVMA Appendix C Discipline Policy. Administrative Hold is used during investigations to protect all parties.</description>
    <label>Administrative Hold Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Administrative Hold</fullName>
            </value>
            <value>
                <fullName>Probation</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Expulsion</fullName>
            </value>
            <value>
                <fullName>Banned Permanently</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>