src/objects/Contact/fields/Application_Reference__c.field-meta.xml
<CustomField>
    <fullName>Application_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Reference</label>
    <referenceTo>Membership_Application__c</referenceTo>
    <relationshipLabel>Applicant Contacts</relationshipLabel>
    <relationshipName>Applicant_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>