src/objects/Contact/fields/CEB_Position__c.field-meta.xml
<CustomField>
    <fullName>CEB_Position__c</fullName>
    <description>Chapter Executive Board position held by member according to CVMA Bylaws</description>
    <label>CEB Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commander (CO)</fullName>
            </value>
            <value>
                <fullName>Executive Officer (XO)</fullName>
            </value>
            <value>
                <fullName>Secretary</fullName>
            </value>
            <value>
                <fullName>Treasurer</fullName>
            </value>
            <value>
                <fullName>Road Captain</fullName>
            </value>
            <value>
                <fullName>Chaplain</fullName>
            </value>
            <value>
                <fullName>Sergeant at Arms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>