src/objects/Contact/fields/CEB_Term_End__c.field-meta.xml
<CustomField>
    <fullName>CEB_Term_End__c</fullName>
    <description>End date of current Chapter Executive Board term</description>
    <label>CEB Term End Date</label>
    <type>Date</type>
</CustomField>