src/objects/Contact/fields/CEB_Term_Start__c.field-meta.xml
<CustomField>
    <fullName>CEB_Term_Start__c</fullName>
    <description>Start date of current Chapter Executive Board term</description>
    <label>CEB Term Start Date</label>
    <type>Date</type>
</CustomField>