src/objects/Contact/fields/CVMA_Store_Access_Suspended__c.field-meta.xml
<CustomField>
    <fullName>CVMA_Store_Access_Suspended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if member's CVMA Store purchasing privileges have been suspended per Appendix C Section 8.e access restrictions</description>
    <inlineHelpText>Check to suspend this member's CVMA Store access during Administrative Hold or disciplinary action per Appendix C.</inlineHelpText>
    <label>CVMA Store Access Suspended</label>
    <type>Checkbox</type>
</CustomField>