src/objects/Contact/fields/Disability_Rating__c.field-meta.xml
<CustomField>
    <fullName>Disability_Rating__c</fullName>
    <description>VA disability rating percentage for veteran members</description>
    <inlineHelpText>Enter the VA disability rating percentage (0-100)</inlineHelpText>
    <label>Disability Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>