src/objects/Contact/fields/Election_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Election_Due_Date__c</fullName>
    <description>Calculated date when election is required for this CEB position per National Bylaws election requirements. Triggers automated alerts at 90, 60, and 30 days prior.</description>
    <formula>IF(
    NOT(ISBLANK(CEB_Term_End__c)),
    CEB_Term_End__c - 30,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatic calculation: 30 days before term end date to ensure election is held before term expires</inlineHelpText>
    <label>Election Due Date</label>
    <type>Date</type>
</CustomField>