src/objects/Contact/fields/Form_400_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_400_Decision_Date__c</fullName>
    <description>Date CVMA Form 400 (Investigation Decision Form) was completed per Appendix C Section 12 investigative requirements</description>
    <inlineHelpText>Record the date Form 400 Investigation Decision was completed. Marks conclusion of investigation phase per Appendix C.</inlineHelpText>
    <label>Form 400 Decision Date</label>
    <type>Date</type>
</CustomField>