src/objects/Contact/fields/Form_402_Outline_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_402_Outline_Date__c</fullName>
    <description>Date CVMA Form 402 (State Investigative Committee Written Outline) was completed for SIC-level investigations per Appendix C escalation procedures</description>
    <inlineHelpText>Record the date Form 402 was completed for State-level investigations. Required when CIC escalates to SIC per Appendix C.</inlineHelpText>
    <label>Form 402 Outline Date</label>
    <type>Date</type>
</CustomField>