src/objects/Contact/fields/Form_404_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_404_Notification_Date__c</fullName>
    <description>Date CVMA Form 404 (Administrative Hold Memorandum Template) was sent to member per Appendix C Section 8 notification requirements</description>
    <inlineHelpText>Record the date Form 404 Administrative Hold notification was sent to this member. Required documentation per Appendix C compliance.</inlineHelpText>
    <label>Form 404 Notification Date</label>
    <type>Date</type>
</CustomField>