src/objects/Contact/fields/Investigation_Committee_Type__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Committee_Type__c</fullName>
    <description>Identifies which level investigative committee is handling this case per CVMA Appendix C Section 12 - establishes proper chain of command for disciplinary proceedings</description>
    <inlineHelpText>Select the investigative committee level handling this member's case. Escalates from CIC → SIC → RIC → NIC per Appendix C procedures.</inlineHelpText>
    <label>Investigation Committee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>CIC - Chapter Investigative Committee</fullName>
            </value>
            <value>
                <fullName>SIC - State Investigative Committee</fullName>
            </value>
            <value>
                <fullName>RIC - Regional Investigative Committee</fullName>
            </value>
            <value>
                <fullName>NIC - National Investigative Committee</fullName>
            </value>
            <value>
                <fullName>NBOD Investigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>