src/objects/Contact/fields/Investigation_Forms_Status__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Forms_Status__c</fullName>
    <description>Tracks completion status of required CVMA investigation forms per Appendix C documentation requirements</description>
    <inlineHelpText>Indicates which investigation forms have been completed. Ensures Appendix C documentation compliance.</inlineHelpText>
    <label>Investigation Forms Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Forms Required</fullName>
                <default>true</default>
                <label>No Forms Required</label>
            </value>
            <value>
                <fullName>Form 404 - Administrative Hold Pending</fullName>
            </value>
            <value>
                <fullName>Form 404 - Completed</fullName>
            </value>
            <value>
                <fullName>Form 400 - Investigation Decision Pending</fullName>
            </value>
            <value>
                <fullName>Form 400 - Completed</fullName>
            </value>
            <value>
                <fullName>Form 402 - SIC Outline Pending</fullName>
            </value>
            <value>
                <fullName>Form 402 - Completed</fullName>
            </value>
            <value>
                <fullName>All Forms Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>