src/objects/Contact/fields/Investigation_Status__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Status__c</fullName>
    <description>Tracks investigation status per CVMA Appendix C Discipline Policy. Used by CEB members with investigative authority to manage disciplinary proceedings.</description>
    <label>Investigation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Inquiry Phase</fullName>
            </value>
            <value>
                <fullName>Chapter Investigation (CIC)</fullName>
            </value>
            <value>
                <fullName>State Investigation (SIC)</fullName>
            </value>
            <value>
                <fullName>Regional Investigation (RIC)</fullName>
            </value>
            <value>
                <fullName>National Investigation (NIC)</fullName>
            </value>
            <value>
                <fullName>Investigation Complete</fullName>
            </value>
            <value>
                <fullName>Appeal Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>