src/objects/Contact/fields/Last_Election_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Election_Date__c</fullName>
    <description>Date this member was last elected to their current CEB position per National Bylaws Article XIV.03.b election procedures</description>
    <inlineHelpText>Record the official election date when this member was elected to their current CEB position</inlineHelpText>
    <label>Last Election Date</label>
    <type>Date</type>
</CustomField>