src/objects/Contact/fields/Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Member_Status__c</fullName>
    <description>Current membership status in CVMA</description>
    <inlineHelpText>Current membership status (Active, Inactive, Suspended, etc.)</inlineHelpText>
    <label>Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Expelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>