src/objects/Contact/fields/Military_Service_Branch__c.field-meta.xml
<CustomField>
    <fullName>Military_Service_Branch__c</fullName>
    <description>Military service branch for veteran members</description>
    <inlineHelpText>Select the primary military service branch for this veteran member</inlineHelpText>
    <label>Military Service Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Army</fullName>
            </value>
            <value>
                <fullName>Navy</fullName>
            </value>
            <value>
                <fullName>Air Force</fullName>
            </value>
            <value>
                <fullName>Marines</fullName>
            </value>
            <value>
                <fullName>Coast Guard</fullName>
            </value>
            <value>
                <fullName>Space Force</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>