src/objects/Contact/fields/NEILON1__Additional_Emails__c.field-meta.xml
<CustomField>
    <fullName>NEILON1__Additional_Emails__c</fullName>
    <label>Additional Emails</label>
    <type>TextArea</type>
</CustomField>