src/objects/Contact/fields/NEILON1__Languages__c.field-meta.xml
<CustomField>
    <fullName>NEILON1__Languages__c</fullName>
    <label>Languages</label>
    <length>100</length>
    <type>Text</type>
</CustomField>